# NeuralNet-Basic

./: CMakeLists.txt  NeuralNet_global.h  README.md  neuralnet.cpp  neuralnet.h  neuralnetviewprovider.cpp  neuralnetviewprovider.h
